fix server of chat
