# routes/chatApplicationData.js
@@ -3,10 +3,16 @@ const express = require('express');
 const router = express.Router();
 
 // import controller
-const { chatAccess } = require('../controllers/chatApplicationData');
+const {
+    chatAccess,
+    fetchChatData,
+    createGroupChat,
+} = require('../controllers/chatApplicationData');
 const { authenticate } = require('../middleware/authurize');
 // import validators
 
 router.post('/user-chat-access', authenticate, chatAccess);
+router.get('/fetch-chat-data', authenticate, fetchChatData);
+router.post('/create-group-chat', authenticate, createGroupChat);
 
 module.exports = router;
